--- a/private_dot_profile.tmpl
+++ b/private_dot_profile.tmpl
@@ -24,15 +24,11 @@ if [ -n "$ZSH_VERSION" ]; then
 fi
 
 # set PATH so it includes user's private bin if it exists
-if [ -d "$HOME/bin" ] ; then
-    PATH="$HOME/bin:$PATH"
-fi
-
-# set PATH so it includes user's private bin if it exists
 if [ -d "$HOME/.local/bin" ] ; then
     PATH="$HOME/.local/bin:$PATH"
 fi
 
+export VISUAL='emacs'
 export EDITOR='emacs -nw'
 
 # Poetry for Python packag management
