Fixed emacs config, removed pyenv references from zsh entirely.

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -68,7 +68,7 @@ ZSH_THEME="tjkirch"
 # Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
-plugins=(git pyenv)
+plugins=(git)
 
 source $ZSH/oh-my-zsh.sh
 
@@ -100,6 +100,7 @@ export EDITOR='emacs -nw'
 # alias ohmyzsh="mate ~/.oh-my-zsh"
 
 export PATH=$HOME/.local/bin:$PATH
+export PATH=$HOME/bin:$PATH
 
 
 # direnv for directory-local configurations
