Update Xresources to be loaded on startup for Ubuntu.

--- a/private_dot_config/i3/config.tmpl
+++ b/private_dot_config/i3/config.tmpl
@@ -224,4 +224,5 @@ exec --no-startup-id dunst
 {{ if (eq .machine "work/amazon/ubuntu") }}
 exec --no-startup-id ~/.screenlayout/main.sh
 exec --no-startup-id /usr/local/amazon/var/acme/session_agents/connections_disco_agent/webapp/AmazonConnections
+exec --no-startup-id xrdb ~/.Xresources
 {{ end }}
