--- a/private_dot_profile.tmpl
+++ b/private_dot_profile.tmpl
@@ -31,7 +31,7 @@ fi
 PATH="$HOME/bin:$PATH"
 
 # Default editor is emacs
-export VISUAL='emacs'
+export VISUAL='emacs -nw'
 export EDITOR='emacs -nw'
 
 {{ if (eq .context "work/amazon") }}
