Add new NixOS display configs, fix i3 config, and fix .profile config.

--- a/private_dot_profile.tmpl
+++ b/private_dot_profile.tmpl
@@ -24,7 +24,7 @@ if [ -n "$ZSH_VERSION" ]; then
 fi
 
 # set PATH so it includes user's private bin if it exists
-if [ -d "$HOME/.local/bin" ] ; then
+if [ -d "$HOME/.local/bin" ]; then
     PATH="$HOME/.local/bin:$PATH"
 fi
 
@@ -47,5 +47,9 @@ export PATH=$HOME/.toolbox/bin:$PATH
 export PATH=/var/lib/flatpak/exports/bin:$HOME/.local/share/flatpak/exports/bin:$PATH
 
 # asdf for tool version management
-source $HOME/.asdf/asdf.sh
-source $HOME/.asdf/completions/asdf.bash
+if [ -f "$HOME/.asdf/asdf.sh" ]; then
+    source $HOME/.asdf/asdf.sh
+fi
+if [ -f "$HOME/.asdf/completions/asdf.bash" ]; then
+    source $HOME/.asdf/completions/asdf.bash
+fi
