--- a/private_dot_config/i3/config.tmpl
+++ b/private_dot_config/i3/config.tmpl
@@ -201,7 +201,7 @@ bar {
 workspace 1 output DisplayPort-0
 workspace 2 output HDMI-A-0
 workspace 3 output DVI-D-0
-{{ else if (eq .machine "home/arch" ) }}
+{{ else if (or (eq .machine "home/arch") (eq .machine "home/nixos")) }}
 workspace 1 output HDMI-0
 workspace 2 output DP-2
 workspace 3 output DP-0
