--- a/private_dot_profile.tmpl
+++ b/private_dot_profile.tmpl
@@ -1,12 +1,4 @@
-# ~/.profile: executed by the command interpreter for login shells.
-# This file is not read by bash(1), if ~/.bash_profile or ~/.bash_login
-# exists.
-# see /usr/share/doc/bash/examples/startup-files for examples.
-# the files are located in the bash-doc package.
-
-# the default umask is set in /etc/profile; for setting the umask
-# for ssh logins, install and configure the libpam-umask package.
-#umask 022
+#!/bin/sh
 
 # if running bash
 if [ -n "$BASH_VERSION" ]; then
@@ -27,8 +19,9 @@ fi
 if [ -d "$HOME/.local/bin" ]; then
     PATH="$HOME/.local/bin:$PATH"
 fi
-
-PATH="$HOME/bin:$PATH"
+if [ -d "$HOME/bin" ]; then
+    PATH="$HOME/bin:$PATH"
+fi
 
 # Default editor is emacs
 export VISUAL='emacs -nw'
